# nes-website

./: .env  README.md  docker-compose.yml  nginx.conf
backend/: .env  .env.example  .gitignore  Makefile  UML DB.drawio  alembic.ini  cli.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/app/: main.py
backend/app/daos/: admin.py  base.py  classroom.py  general.py  post.py  user.py
backend/app/models/: admin.py  base.py  classroom.py  common.py  enrollment.py  enum.py  expense.py  relationships.py  user.py
backend/app/routers/: admin.py  api_router.py  auth.py  classroom.py  comment.py  general.py  post.py  students.py  teacher.py
backend/app/routers/admin/: __init__.py  admin_router.py  classroom.py  finance.py  property.py  users.py
backend/app/schemas/: admin.py  classroom.py  expense.py  user.py
backend/app/services/: db.py  decorators.py  settings.py  user.py
backend/configurations/: db.py  settings.py
backend/daos/: base.py  user.py
backend/migrations/: env.py
backend/migrations/versions/: 080fb63d5975_.py  1ed41bfec15f_.py  5dc92e32a16b_.py  bb12193b9cd3_init_db.py  cdde474ee3d4_.py
backend/models/: base.py  classroom.py  enum.py  expense.py  relationships.py  user.py
backend/routers/: admin.py  api_router.py  auth.py  classroom.py  student.py  teacher.py
backend/schemas/: admin.py  classroom.py  user.py
backend/services/: db.py  settings.py  user.py
backend/tests/: conftest.py  test_admin_users.py  test_auth.py  test_classroom.py  utils.py
frontend/: .gitignore  .prettierrc  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/components/: AttachmentModal.tsx  AutoComplete.tsx  Breadcrumb.tsx  Button.tsx  ButtonNES.tsx  ConfirmModal.tsx  DrawerNES.tsx  LandingPageDropDown.tsx  Loading.tsx  LogInOutButtom.tsx  LoggedUserDropDown.tsx  LoginButtom.tsx  Logo.tsx  MinimalUserPresentation.tsx  NavBar.tsx  NavBarDropDown.tsx  SideBar.tsx  ThemeToggle.tsx  Toast.tsx
frontend/src/contexts/: backend.tsx  expenseLogs.tsx  session.tsx  theme.tsx
frontend/src/data/: constants.ts  translations.ts
frontend/src/hooks/: classroom.ts
frontend/src/pages/: 404.tsx  _app.tsx  _document.tsx  index.tsx
frontend/src/schemas/: ben.ts  classroom.ts  classrooms.ts  finance.ts  notices.ts  post.ts  success-case.ts  user.ts
frontend/src/services/: classroom.ts  general.ts
frontend/src/styles/: globals.css
(+150 files in other folders)
