[tool.poetry]
name = "backend"
version = "0.1.0"
description = "A backend for the NES Website project"
authors = ["felipeadeildo <felipe.adeildo@proton.me>"]
readme = ""


[tool.ruff]
line-length = 79


[tool.poetry.dependencies]
python = "^3.10"
alembic = "1.13.1"
annotated-types = "0.6.0"
anyio = "4.2.0"
cffi = "1.16.0"
click = "8.1.7"
cryptography = "42.0.4"
ecdsa = "0.18.0"
fastapi = "0.108.0"
greenlet = "3.0.3"
h11 = "0.14.0"
idna = "3.7"
mako = "1.3.0"
markupsafe = "2.1.3"
passlib = "1.7.4"
pyasn1 = "0.5.1"
pycparser = "2.21"
pydantic = {extras = ["email"], version = "^2.5.3"}
pydantic-settings = "2.1.0"
pydantic-core = "2.14.6"
python-dotenv = "1.0.0"
python-jose = "3.3.0"
rsa = "4.9"
six = "1.16.0"
sniffio = "1.3.0"
sqlalchemy = "2.0.24"
starlette = "0.32.0.post1"
typing-extensions = "4.9.0"
uvicorn = "0.25.0"
python-multipart = "^0.0.7"
pandas = "^2.2.0"
xlsxwriter = "^3.1.9"
httpx = "^0.27.0"
pytest = "^8.1.1"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
ipython = "^8.25.0"
httpx = "^0.27.0"
ruff = "^0.4.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
